--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -68,6 +68,11 @@ nav a {
     height: 180px;
 }
 
+.image3{
+    display: flex;
+    height: 200px;
+}
+
 body {
     font-family: 'Alice';font-size: 19px;
 }
