I AM STILL SLAYINGGGGG

--- a/Assets/Styles/style.css
+++ b/Assets/Styles/style.css
@@ -131,11 +131,15 @@ width: 100%;
 }
 
 .topnav input[type=text] {
-
     float: right;
     padding: 6px;
     border: none;
     margin-top: 8px;
     margin-right: 16px;
     font-size: 17px;
-  }
+}
+
+.quizlink{
+    text-decoration: none;
+    color: black;
+}
